@@ -1,0 +1,1 @@
+#define PACKAGE_VERSION "2.0"
